# mc-server-manager

./: .gitignore  LICENSE  README.md  index.html  package-lock.json  package.json  run.bat  vite.config.js
src/: App.vue  main.js  router.js
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.ico~
src-tauri/src/: main.rs
src-tauri/src/config/: get.rs  mod.rs  set.rs
src-tauri/src/files/: get.rs  mod.rs  server.rs
src-tauri/src/server/: create.rs  files.rs  info.rs  log.rs  mod.rs  mods.rs  run.rs  structs.rs
src/assets/css/: omorphia.css
src/assets/scss/: global.scss
src/components/: AddServer.vue  Landing.vue  SaveButton.vue  Settings.vue  loading.vue
src/components/icons/: InfoTable.vue  ServerTypeIcon.vue  home.vue
src/components/server/: FileView.vue  LiveLogView.vue  PropertyEditorView.vue  ServerInfoView.vue  TextEditorView.vue  [id].vue  console.vue  downloadMods.vue  files.vue  modInfo.vue  propertiesEditor.vue  serverInfo.vue  textEditor.vue
