[package]
name = "mc-server-manager"
version = "0.0.1"
description = "Minecraft Server Manager"
authors = ["oxydien"]
license = "MIT"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog-all", "shell-all"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.11.18"
base64 = "0.21.2"
tokio = { version = "1.28.2", features = ["full"] }
url = "2.4.0"
tokio-util = "0.7.8"
hyper = "0.14.26"
http = "0.2.9"
dirs = "5.0.1"
rustc-serialize = "0.3.24"
regex = "1.8.4"
hex = "0.4.3"
substring = "1.4.5"
semver = "1.0.17"
async-std = "1.12.0"
open = "4.1.0"
lazy_static = "1.4.0"
chrono = "0.4.26"
mc-query = "1.0.1"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
